--- a/Adventure/Adventure/Adventure.csproj
+++ b/Adventure/Adventure/Adventure.csproj
@@ -96,9 +96,9 @@
     <Compile Include="TextureManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Assets\red.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
+    <Content Include="Assets\red.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Automaton2DLogo.ico" />
     <Content Include="Notes\Notities.txt" />
   </ItemGroup>
