Started working on InputManager
Need to define a list of desired input actions and ensure that all those
actions can be read and re-mapped from code.

--- a/Adventure/Adventure/Adventure.csproj
+++ b/Adventure/Adventure/Adventure.csproj
@@ -78,6 +78,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity.cs" />
+    <Compile Include="Input\Command.cs" />
+    <Compile Include="Input\InputManager.cs" />
+    <Compile Include="Input\TestCommand.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
